tests/ty-var-annot-07/out.txt
error: mismatched types: expected '23, found '22
  ┌─ err.sml:1:40
  │
1 │ fun ('a, 'b) f (xs: 'a list) (x: 'b) = x :: xs
  │                                        ^^^^^^^

typechecking failed
